--- a/src/components/pages/Barbers/Barbers.css
+++ b/src/components/pages/Barbers/Barbers.css
@@ -1,27 +1,7 @@
-.div-barbers{
-    background-image: url("https://images.pexels.com/photos/897270/pexels-photo-897270.jpeg?auto=compress&cs=tinysrgb&w=1600");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    min-height: 100vh;
-    padding-top: 70px;
-    width: 80vw;
-   
-}
 
 
-.div-c{
-    max-width: 100vw;
-}
-.img-card{
-    max-height: 300px;
-}
 
-.card{
-    max-width: 390px;
-    margin: auto;
-}
-@media only screen and (max-width: 600px) {
+ @media only screen and (max-width: 600px) {
     .card{
         max-width: 100%;
     }
@@ -31,23 +11,68 @@
         background-size: cover;
         background-attachment: fixed;
         padding-top: 40px;
+        width: 90vw;
     }
+    .select-filter{
+        max-width: 200px;
+        margin-left: 50px;
+        height: 40px;
+        border-radius: 5px;
+        color: rgba(0, 0, 0, 0.633);
+    }
+
+    .search-input-barbers{
+        max-width: 180px;
+       }
   }
 
-  .div-load-more{
-    width: 100%;
-    /* height: %; */
-    text-align: center;
+
+  @media only screen and (min-width: 600px) {
+    .div-barbers{
+        background-image: url("https://images.pexels.com/photos/897270/pexels-photo-897270.jpeg?auto=compress&cs=tinysrgb&w=1600");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        min-height: 100vh;
+        padding-top: 70px;
+        width: 80vw;
+       
+    }
     
+    
+    .div-c{
+        max-width: 100vw;
+    }
+    .img-card{
+        max-height: 300px;
+    }
+    
+    .card{
+        max-width: 390px;
+        margin: auto;
+    }
+      .div-load-more{
+        width: 100%;
+        /* height: %; */
+        text-align: center;
+        
+      }
+      .arrow-gif{
+        max-width: 20%;
+        margin-bottom: 0px;
+      }
+     .btn-shoeMore{
+        max-width: 40%;
+        margin-top: 0px;
+     }
+     .search-input-barbers{
+      max-width: 300px;
+     }
+    
+     .select-filter{
+     width: 300px;
+     height: 40px;
+     margin-left: 25px;
+     
+    border-radius: 5px;}
   }
-  .arrow-gif{
-    max-width: 20%;
-    margin-bottom: 0px;
-  }
- .btn-shoeMore{
-    max-width: 40%;
-    margin-top: 0px;
- }
- .search-input-barbers{
-  max-width: 300px;
- }
