--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -4,11 +4,10 @@
 }
 
 .form-signIn{
-    width: 80%;
-    height: 60%;
+    width: 100%;
     border-radius: 20px ;
-    margin: auto;
-    padding: 5px;
+     padding-top: 15px;
+     height: 60%;
 }
 
 .div-signUp{
@@ -17,11 +16,34 @@
 }
 
 .form-signUp{
-    width: 80%;
-    height: 60%;
+    width: 100%;
+    
     border-radius: 20px ;
     margin: auto;
     padding-left: 50px;
     padding-right: 50px;
     color: rgb(0, 0, 0);
+    padding-bottom: 50px;
+}
+
+
+@media screen and (min-width:600px) {
+    .form-signUp{
+        width: 80%;
+        
+        border-radius: 20px ;
+        margin: auto;
+        padding-left: 50px;
+        padding-right: 50px;
+        color: rgb(0, 0, 0);
+        padding-bottom: 50px;
+    }
+
+    .form-signIn{
+        width: 80%;
+        max-height: 60%;
+        border-radius: 20px ;
+         padding-top: 15px;
+    }
+
 }
